# sabcr

./: CMakeLists.txt  README.md
.cache/clangd/index/: hola.cpp.227D4AA4FC54C844.idx  hola.h.B5AD28DF4F10367D.idx  main.cpp.FB84CE52ACB9A602.idx
include/: hola.h
resource/: hola.cpp
src/: main.cpp
